fixed menu button on mobile

--- a/source/scss/templates/_navigation.scss
+++ b/source/scss/templates/_navigation.scss
@@ -14,9 +14,19 @@
     }
   }
 }
+
 .navbar-collapse {
   justify-content: flex-end;
   margin-right: 5%;
+}
+
+.navbar-toggler {
+  border: 0;
+  outline: 0;
+}
+
+.navbar-toggler:focus {
+  box-shadow: none;
 }
 
 .rounded-20{
