--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -682,6 +682,15 @@ a:hover {
   margin-right: 5%;
 }
 
+.navbar-toggler {
+  border: 0;
+  outline: 0;
+}
+
+.navbar-toggler:focus {
+  box-shadow: none;
+}
+
 .rounded-20 {
   border-radius: 20px;
 }
